Improved the redirect in the virtual host

--- a/files/apache/virtualhost.conf
+++ b/files/apache/virtualhost.conf
@@ -1,21 +1,23 @@
 <VirtualHost *:80>
-        
+
         # change to fit your server name
         ServerName dev.getconverge.com
         # change to your local ops e-mail
         ServerAdmin webmaster@getconverge.com
-        
+
+        Redirect 301 / http://dev.getconverge.com/converge/
+
         DocumentRoot /var/www/html
 
         ErrorLog ${APACHE_LOG_DIR}/dev.getconverge.com-error.log
         CustomLog ${APACHE_LOG_DIR}/dev.getconverge.com-access.log combined
 
-        ProxyPass         /  http://localhost:8080/converge nocanon
-        ProxyPassReverse  /  http://localhost:8080/converge
+        ProxyPass         /converge/  http://localhost:8080/converge/  nocanon
+        ProxyPassReverse  /converge/  http://localhost:8080/converge/
         ProxyRequests     Off
         AllowEncodedSlashes NoDecode
 
-        <Proxy http://localhost:8080/converge*>
+        <Proxy *>
                 Order deny,allow
                 Allow from all
         </Proxy>
